🙋‍♀️ FAQ sur la homepage

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="right"></div>
     </div>
     <div id="welcome-explainer">
-        <h1>👉 SensCritique2Letterboxd 👈</h1>
+        <h1>👉 Migrer de SensCritique à Letterboxd 👈</h1>
         <img style="width: 15vh;" src="./img/welcome-gif.gif" />
         <p><br />Plop ! Voici un outil pour exporter ta collection SensCritique dans le format .CSV adapt&eacute; pour Letterboxd !</p>
         <p><br /><strong>✨ Entre ton username SensCritique en haut, et z&eacute;&eacute;&eacute;&eacute; parti ! ✨<br /></strong></p>
@@ -71,6 +71,21 @@
         <h2><br />⚙️ Comment &ccedil;a marche ?</h2>
         <p>Cet outil utilise un petit script Javascript execut&eacute; en local, qui r&eacute;cup&egrave;re les donn&eacute;es de l'utilisateur depuis la nouvelle version de SensCritique.</p>
         <p>Vous obtiendrez &agrave; la fin un fichier .CSV contenant tous vos films, la note &amp; la date de visionnage que vous avez entr&eacute;es sur SensCritique, qu'il est ensuite possible <a href="https://letterboxd.com/import/">d'importer sur Letterboxd</a>.</p>
+        <h2 id="-faq">🙋‍♀️ FAQ</h2>
+        <ul>
+        <li><em>Et les critiques ?</em><ul>
+        <li><strong>Les critiques ne sont pas incluses dans l&#39;export.</strong> D&#39;un point de vue technique, il serait simple de les ajouter. Il est tout de même préférable de faire ce genre de choses à la main pour être sûr du formatage de chaque plateforme. Si c&#39;est très demandé, je pourrai ajouter une option.</li>
+        </ul>
+        </li>
+        <li><em>Et si je ne veux plus noter mes films sur Letterboxd ?</em><ul>
+        <li>Les notes seront incluses dans le .CSV, mais <strong>l&#39;outil d&#39;importation de Letterboxd comporte une case à cocher &quot;Import Ratings&quot; qu&#39;il est possible de décocher</strong>.</li>
+        </ul>
+        </li>
+        <li><em>J&#39;ai déjà noté certains films sur Letterboxd.</em><ul>
+        <li>La note est différente, <strong>Letterboxd la remplacera par celle de SensCritique</strong>.</li>
+        </ul>
+        </li>
+        </ul>
         <br /><a href="https://github.com/phileastv/SensCritique2Letterboxd">Voir ce projet sur Github.</a> <br />Ceci un projet personnel non affili&eacute; &agrave; SensCritique, SensCritique.com ou SENSCRITIQUE SARL, et n'utilise aucune de leurs technologies ou code priv&eacute;.</div>
 
 </body>
