🧾 Test d'enlever la limite de 1000

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </br>
                         <div id="numberinputgroup">
                             <label for="numbertoload">Nombre d'items à charger :</label>
-                            <input id="numbertoload" type="number" value="25" max="1000" min="1" style="width: 4em;">
+                            <input id="numbertoload" type="number" value="25" min="1" style="width: 4em;">
                             <input id="submit" type="submit" value="Et zé parti !">
                         </div>
                     </div>
