--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div id="numberinputgroup">
                             <label for="numbertoload">Charger </label>
                             <input id="numbertoload" type="number" value="25" max="1000" min="1" style="width: 4em;">
-                            <label for="loadallprofile">élements. OU charger toute ma collection :</label>
+                            <label for="loadallprofile">élements OU charger toute ma collection :</label>
                             <input id="loadallprofile" type="checkbox">
                             <input id="submit" type="submit" value="Et zé parti !">
                         </div>
