--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script defer src="src/index.js" charset="uts-8"></script>
     <link rel="stylesheet" href="./css/style.css">
+	<meta name="description" content="L'outil de migration simple pour passer de SensCritique à Letterboxd.">
+    <meta property="og:title" content="Add title here">
+    <meta property="og:description" content="SensBoxd : exporter ses données SensCritique vers Letterboxd.">
+    <meta property="og:image" content="https://your-website.com/og-image.png">
+    <meta property="og:url" content="http://sensboxd.phileas.tv/img/Sens2Boxd-logo.svg">
+    <meta name="twitter:title" content="SensBoxd">
+    <meta name="twitter:description" content="SensBoxd : exporter ses données SensCritique vers Letterboxd.">
+    <meta name="twitter:url" content="http://sensboxd.phileas.tv/img/Sens2Boxd-logo.svg">
+    <meta name="twitter:card" content="Passer de SensCritique à Letterboxd.">
 </head>
 
 <body>
     <div id="header" class="header">
         <div id="header-left" class="header-left">
             <a href="./">
-                <img class="logo" src="./img/Sens2Boxd-logo.svg" />
+                <img class="logo" src="./img/Sens2Boxd-logo.svg" alt="Migration SensCritique Letterboxd"/>
             </a>
         </div>
         <div id="header-center" class="header-center">
