--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <p><br />Plop ! Voici un outil pour exporter ta collection SensCritique dans le format .CSV adapt&eacute; pour Letterboxd !</p>
         <p><br /><strong>✨ Entre ton username SensCritique en haut, et z&eacute;&eacute;&eacute;&eacute; parti ! ✨<br /></strong></p>
         <p><br />Une fois que tu as tous les films qu'il te faut, clique sur le bouton "Exporter" en haut &agrave; droite.</p>
+        <p><br /><br /><span style="color: #27ae60;"><strong>Mise &agrave; jour du 20 d&eacute;cembre 2022 :</strong></span></p>
+        <p>L'outil &agrave; &eacute;t&eacute; mis &agrave; jour pour corriger des soucis d'exports que conaissaient certains utilisateurs.</p>
+        <p>Bonnes f&ecirc;tes 🎄</p>
         <h2><br />😶 Pourquoi</h2>
         <p>Il y a de plus en plus d'int&eacute;r&ecirc;t &agrave; avoir un profil complet SensCritique et Letterboxd : les deux plateformes deviennent de plus en plus compl&eacute;mentaires et gagnent chaqu&rsquo;une en force tous les jours.</p>
         <p>Ce projet vient simplement de l'envie d'avoir un profil Letterboxd complet &agrave; partir de mes donn&eacute;es SensCritique.</p>
