Fix du lien CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script defer src="src/state-manager.js" charset="utf-8"></script>
     <!-- Main application -->
     <script defer src="src/index.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 	<meta name="description" content="L'outil de migration simple pour passer de SensCritique à Letterboxd.">
     <meta property="og:title" content="Add title here">
     <meta property="og:description" content="SensBoxd : exporter ses données SensCritique vers Letterboxd.">
