Fix proxy in HTTPS and better proxy debug

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>SensBoxd</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <!-- Configuration and modules -->
-    <script defer src="src/config.js" charset="utf-8"></script>
-    <script defer src="src/graphql-queries.js" charset="utf-8"></script>
-    <script defer src="src/state-manager.js" charset="utf-8"></script>
+    <script defer src="src/config.js?v=5" charset="utf-8"></script>
+    <script defer src="src/graphql-queries.js?v=5" charset="utf-8"></script>
+    <script defer src="src/state-manager.js?v=5" charset="utf-8"></script>
     <!-- Main application -->
-    <script defer src="src/index.js" charset="utf-8"></script>
+    <script defer src="src/index.js?v=5" charset="utf-8"></script>
     <link rel="stylesheet" href="css/style.css">
 	<meta name="description" content="L'outil de migration simple pour passer de SensCritique à Letterboxd.">
     <meta property="og:title" content="Add title here">
